--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="Style.css" />
   </head>
   <body>
     <header>
@@ -381,7 +381,7 @@
            
             <p
               id="formStatus"
-              style="margin-top: 20px; font-weight: bold; min-height: 24px"
+              style="margin-top: 20px; font-weight: bold; min-height: 24px;"
             ></p>
           </form>
         </section>
@@ -395,6 +395,6 @@
       </div>
     </footer>
 
-    <script src="script.js" defer></script>
+    <script src="Script.js" defer></script>
   </body>
 </html>
