Changes in card animation

--- a/index.html
+++ b/index.html
@@ -227,6 +227,57 @@
             </article>
             <article class="card">
               <img
+                src="C:\Users\poude\Pictures\Screenshots\Screenshot (297).png"
+                alt="Personal Portfolio Project"
+              />
+              <div class="card-content">
+                <h3>Personal Portfolio</h3>
+                <p>
+                  A modern single-page portfolio with smooth animations and dark
+                  mode (you're looking at it!).
+                </p>
+                <div class="card-links">
+                  <a href="#" target="_blank">Live Demo →</a>
+                  <a href="#" target="_blank">GitHub →</a>
+                </div>
+              </div>
+            </article>
+            <article class="card">
+              <img
+                src="C:\Users\poude\Pictures\Screenshots\Screenshot (297).png"
+                alt="Personal Portfolio Project"
+              />
+              <div class="card-content">
+                <h3>Personal Portfolio</h3>
+                <p>
+                  A modern single-page portfolio with smooth animations and dark
+                  mode (you're looking at it!).
+                </p>
+                <div class="card-links">
+                  <a href="#" target="_blank">Live Demo →</a>
+                  <a href="#" target="_blank">GitHub →</a>
+                </div>
+              </div>
+            </article>
+            <article class="card">
+              <img
+                src="C:\Users\poude\Pictures\Screenshots\Screenshot (297).png"
+                alt="Personal Portfolio Project"
+              />
+              <div class="card-content">
+                <h3>Personal Portfolio</h3>
+                <p>
+                  A modern single-page portfolio with smooth animations and dark
+                  mode (you're looking at it!).
+                </p>
+                <div class="card-links">
+                  <a href="#" target="_blank">Live Demo →</a>
+                  <a href="#" target="_blank">GitHub →</a>
+                </div>
+              </div>
+            </article>
+            <article class="card">
+              <img
                 src="C:\Users\poude\Pictures\Screenshots\Screenshot (299).png"
                 alt="Landing Page Project"
               />
@@ -320,8 +371,8 @@
 
       <section id="contact">
         <div class="container">
-
-             <div id="My-Information">
+          
+             <div class ="My-Information">
                 <h2 id="connect">To Connect With Me</h2>
                 <Enmail>poudelsushant35@gmail.com</Enmail><br>
                 <Contact>+977-9804459956</Contact><br>
@@ -329,16 +380,17 @@
                 <Adress>New-Baneshwor, Kathmandu</Adress>
              </div>
              <div class="container">
-             <div class="social-links" id="social-links2">
+             <span class="social-links" id="social-links2">
              <a href="#" aria-label="GitHub"><i class="fab fa-github"></i></a>
              <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
              <a href="mailto:poudelsushant35@gmail.com" aria-label="Email"><i class="fas fa-envelope"></i></a>
              <a href="#" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
              <a href="https://www.instagram.com/sushantpoudel83/" target="_blank" rel="noopener noreferrer" aria-label="Instagram Profile"><i class="fab fa-instagram"></i></a>
              <a href="#" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
-            <a href="#" aria-label="Snapchat"><i class="fab fa-snapchat"></i></a>
-            </div>
-            <br><br><br>
+             <a href="#" aria-label="Snapchat"><i class="fab fa-snapchat"></i></a>
+             </span>
+        
+             <br><br><br>
         <section id="Get In Touch">
           <h2>Get In Touch</h2>
           <foruchm
