Asset added , Made more responsive , Animation added on hover

--- a/index.html
+++ b/index.html
@@ -109,7 +109,9 @@
           <h2>About Me</h2>
           <div class="about-content">
             <div class="hero-image">
-              <img src="IMG-20241116-WA0060~2.png" alt="Sushant Poudel" />
+              <div class="hero-image-2">
+              <img src="/466160239_122149287770303116_3977225881221307942_n.png" alt="Sushant Poudel" />
+              </div>
             </div>
             <div class="about-text">
               <p>
@@ -133,7 +135,7 @@
 
       <section id="skills">
         <div class="container">
-          <h2>My Skills</h2>
+          <h2 id="connect">Technical Skills</h2>
           <div class="skills-grid">
             <div class="skill-item">
               <h3>HTML </h3>
@@ -144,25 +146,25 @@
             <div class="skill-item">
               <h3>CSS </h3>
               <div class="progress-bar">
-                <div class="progress" style="width: 95%"></div>
+                <div class="progress" style="width: 75%"></div>
               </div>
             </div>
             <div class="skill-item">
               <h3>JavaScript</h3>
               <div class="progress-bar">
-                <div class="progress" style="width: 90%"></div>
+                <div class="progress" style="width: 60%"></div>
               </div>
             </div>
             <div class="skill-item">
               <h3>React</h3>
               <div class="progress-bar">
-                <div class="progress" style="width: 85%"></div>
+                <div class="progress" style="width: 50%"></div>
               </div>
             </div>
             <div class="skill-item">
               <h3>Figma / UI-UX</h3>
               <div class="progress-bar">
-                <div class="progress" style="width: 90%"></div>
+                <div class="progress" style="width: 50%"></div>
               </div>
             </div>
             <div class="skill-item">
@@ -180,8 +182,59 @@
             <div class="skill-item">
               <h3>SEO</h3>
               <div class="progress-bar">
-                <div class="progress" style="width: 85%"></div>
+                <div class="progress" style="width: 50%"></div>
               </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="skills">
+        <div class="container">
+          <h2> Soft Skills</h2>
+          <div class="skills-grid">
+            <div class="skill-item">
+              <h3>Problem-solving</h3>
+              <div class="progress-bar">
+                <div class="progress" style="width: 100%"></div>
+              </div>
+            </div>
+            <div class="skill-item">
+              <h3>Communication Skills</h3>
+              <div class="progress-bar">
+                <div class="progress" style="width: 100%"></div>
+              </div>
+            </div>
+            <div class="skill-item">
+              <h3>Time Management</h3>
+              <div class="progress-bar">
+                <div class="progress" style="width: 100%"></div>
+              </div>
+            </div>
+            <div class="skill-item">
+              <h3>Adaptability</h3>
+              <div class="progress-bar">
+                <div class="progress" style="width: 100%"></div>
+              </div>
+            </div>
+            <div class="skill-item">
+              <h3>Learning-Mindset</h3>
+              <div class="progress-bar">
+                <div class="progress" style="width: 100%"></div>
+              </div>
+            </div>
+            <div class="skill-item">
+              <h3>Team Collaboration</h3>
+              <div class="progress-bar">
+                <div class="progress" style="width: 100%"></div>
+              </div>
+            </div>
+            <div class="skill-item">
+              <h3>Creative Mindset</h3>
+              <div class="progress-bar">
+                <div class="progress" style="width: 100%"></div>
+              </div>
+            </div>
+            </div>
             </div>
           </div>
         </div>
@@ -191,26 +244,10 @@
         <div class="container">
           <h2>Projects</h2>
           <div class="grid">
+            
             <article class="card">
               <img
-                src="C:\Users\poude\Pictures\Screenshots\Screenshot (298).png"
-                alt="E-Commerce Website Project"
-              />
-              <div class="card-content">
-                <h3>E-Commerce Platform</h3>
-                <p>
-                  A fully responsive online store built with React and Node.js
-                  featuring cart functionality and payment integration.
-                </p>
-                <div class="card-links">
-                  <a href="#" target="_blank">Live Demo →</a>
-                  <a href="#" target="_blank">GitHub →</a>
-                </div>
-              </div>
-            </article>
-            <article class="card">
-              <img
-                src="C:\Users\poude\Pictures\Screenshots\Screenshot (297).png"
+                src="Screenshot (13).png"
                 alt="Personal Portfolio Project"
               />
               <div class="card-content">
@@ -224,78 +261,10 @@
                   <a href="#" target="_blank">GitHub →</a>
                 </div>
               </div>
-            </article>
-            <article class="card">
-              <img
-                src="C:\Users\poude\Pictures\Screenshots\Screenshot (297).png"
-                alt="Personal Portfolio Project"
-              />
-              <div class="card-content">
-                <h3>Personal Portfolio</h3>
-                <p>
-                  A modern single-page portfolio with smooth animations and dark
-                  mode (you're looking at it!).
-                </p>
-                <div class="card-links">
-                  <a href="#" target="_blank">Live Demo →</a>
-                  <a href="#" target="_blank">GitHub →</a>
-                </div>
-              </div>
-            </article>
-            <article class="card">
-              <img
-                src="C:\Users\poude\Pictures\Screenshots\Screenshot (297).png"
-                alt="Personal Portfolio Project"
-              />
-              <div class="card-content">
-                <h3>Personal Portfolio</h3>
-                <p>
-                  A modern single-page portfolio with smooth animations and dark
-                  mode (you're looking at it!).
-                </p>
-                <div class="card-links">
-                  <a href="#" target="_blank">Live Demo →</a>
-                  <a href="#" target="_blank">GitHub →</a>
-                </div>
-              </div>
-            </article>
-            <article class="card">
-              <img
-                src="C:\Users\poude\Pictures\Screenshots\Screenshot (297).png"
-                alt="Personal Portfolio Project"
-              />
-              <div class="card-content">
-                <h3>Personal Portfolio</h3>
-                <p>
-                  A modern single-page portfolio with smooth animations and dark
-                  mode (you're looking at it!).
-                </p>
-                <div class="card-links">
-                  <a href="#" target="_blank">Live Demo →</a>
-                  <a href="#" target="_blank">GitHub →</a>
-                </div>
-              </div>
-            </article>
-            <article class="card">
-              <img
-                src="C:\Users\poude\Pictures\Screenshots\Screenshot (299).png"
-                alt="Landing Page Project"
-              />
-              <div class="card-content">
-                <h3>Business Landing Page</h3>
-                <p>
-                  High-converting landing page designed in Figma and developed
-                  with HTML, CSS, and JavaScript.
-                </p>
-                <div class="card-links">
-                  <a href="#" target="_blank">Live Demo →</a>
-                  <a href="#" target="_blank">GitHub →</a>
-                </div>
-              </div>
-            </article>
           </div>
         </div>
       </section>
+      
 
       <section id="services">
         <div class="container">
