Fix image tag indentation in index.html

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           <div class="about-content">
             <div class="hero-image">
               <div class="hero-image-2">
-              <img src="/Sushant123.png" alt="Sushant Poudel" />
+              <img src="Sushant123.png" alt="Sushant Poudel" />
               </div>
             </div>
             <div class="about-text">
